# jsonrpcdemo

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config  go.mod  go.sum  main.go  run.cpp  runServer
cgotest/: main.c
config/: config.yaml
grpc/capi/: capi.c
grpc/gserver/: gserver_test.go
grpc/run/: main.go
jsonRPC/: api.go  jsonRPC.go  jsonRPC_test.go  types.go  util.go
jsonRPC_Edge/: jsonRPC_Edge.go  jsonRPC_Edge_test.go  types.go
jsonrpc/client/: client.go  interface.go
jsonrpc/cmd/: main.go  okkk.txt
jsonrpc/jsonrpcserver/: api.go  api_test.go  jsonrpcserver.go  types.go
jsonrpc/run/: main.c  main.go
jsonrpc/util/: util.go
logger/: logger.go
xcgo/config/: config.yaml
xcgo/util/: cgo.c  cgo.h  convertEthTx.go  runserver
xwrap/: main.c
xwrap/util/: wrap.go  wrap.h
